<resources>
    <string name="app_name">Trivia</string>
    <string name="title_activity_game">MainActivity</string>
    <string name="title_profileEn">Profile</string>
    <string name="title_profileRou">Profil</string>
    <string name="title_scoreEn">Score</string>
    <string name="title_scoreRou">Scor</string>
    <string name="title_gameEn">Game</string>
    <string name="title_gameRou">Joc</string>
    <string name="helpMenuItemProfileEn">Help</string>
    <string name="helpMenuItemProfileRou">Ajutor</string>
    <string name="signOutMenuItemProfileEn">Sign out</string>
    <string name="signOutMenuItemProfileRou">Deconectare</string>
    <string name="helpTextHowToPlayRou">\n
În momentul în care apeși butonul MODUL CLASIC, se va afișa un meniu pentru alegerea categoriilor. După ce se apasă butonul Joacă, ai timp 30 de secunde sa răspunzi
la întrebare. După fiecare întrebare la care s-a răspuns sau în cazul în care expiră timpul, va apărea un meniu intermediar în care vei putea vedea punctajul total acumulat în jocul curent și punctajul
obținut pe întrebarea curentă.
Ai 2 opțiuni de alegere a răspunsului: prin atingerea butonului corespunzător variantei dorite sau cu ajutorul
comenzii vocale daca acesta este activat(poate fi activat/dezactivat din meniul de start sau din meniul intermediar).
Aceeași situație o avem și în meniul intermediar: pentru a trece la următoarea întrebare poți folosi comanda vocală, rostind "Continuă", sau apasând butonul "Continuă". Un joc conține 10 intrebări.\n\n
    </string>
    <string name="helpTextHowToPlayEn">\n
    When you press the CLASSIC MODE, a menu for choosing categories will be displayed. After pressing the Play button, you have 30 seconds to respond
to the question. After each question answered or if time expires, an intermediate menu will appear in which you will be able to see the total score accumulated in the current game and the score
obtained on the current question.
You have 2 options to choose the answer: by touching the button corresponding to the desired variant or with the help
voice command if it is activated (it can be activated / deactivated from the start menu or from the intermediate menu).
We have the same situation in the intermediate menu: to move to the next question you can use the voice command, saying "Continue", or by pressing the "Continue" button. A game contains 10 questions.\n\n
    </string>
    <string name="helpTextHowToScoreRou">\n
Pe fiecare intrebarea primești atâtea puncte câte secunde au rămas de la afișarea intrebării. În cazul în care folosești comanda vocală, atunci vei primi un bonus la un răspuns corect
, acest bonus acoperind timpul pierdut până ce microfonul reperează ceea ce spui. Daca greșești la o întrebare sau timpul expiră, nu vei primi punctaj pe acea întrebare.\n\n
    </string>
    <string name="helpTextHowToScoreEn">\n
        For each question you receive as many points as there are seconds left from displaying the question. If you use voice command, then you will receive a bonus to a correct answer
, this bonus covering the time lost until the microphone detects what you are saying. If you make a mistake in a question or the time expires, you will not receive a score on that question.\n\n
    </string>
    <string name="welcomeTextViewLogEn">Welcome to TRIVIA!</string>
    <string name="welcomeTextViewLogRou">Bun venit in TRIVIA!</string>
    <string name="chooseLanguageTextViewLogEditEn">Choose language:</string>
    <string name="chooseLanguageTextViewLogEditRou">Selectează limba:</string>
    <string name="exOptionsTextViewLogEditEn">Select options:</string>
    <string name="exOptionsTextViewLogEditRou">Selectează optiunile:</string>
    <string name="microphoneSwitchLogMenuEditPlayEn">Voice command</string>
    <string name="microphoneSwitchLogMenuEditPlayRou">Comandă vocală</string>
    <string name="loudSpeakerSwitchLogMenuEditPlayEn">Audio feedback</string>
    <string name="loudSpeakerSwitchLogMenuEditPlayRou">Feedback audio</string>
    <string name="muteButtonLogEn">Mute</string>
    <string name="muteButtonLogRou">Mut</string>
    <string name="nextButtonLogMenuPlayEn">Next</string>
    <string name="nextButtonLogMenuPlayRou">Continuă</string>
    <string name="describePopUpAudioLogEn">Welcome to Trivia!</string>
    <string name="describePopUpAudioLogRou">Bun venit în Trivia!</string>
    <string name="describePopUpCommandsAudioLogEn">PopUp commands description!</string>
    <string name="describePopUpCommandsAudioLogRou">Descriere comenzilor din PopUp!</string>
    <string name="describeAudioLogEn">Welcome to login screen!</string>
    <string name="describeAudioLogRou">Bun venit în ecranul de logare!</string>
    <string name="describeAudioPermissionAudioLogEn">Welcome to Trivia audio permission!</string>
    <string name="describeAudioPermissionAudioLogRou">Bun venit în permisiunea audio Trivia!</string>
    <string name="describeCommandsAudioLogEn">Commands description!</string>
    <string name="describeCommandsAudioLogRou">Descrierea comenzilor!</string>
    <string name="restartPresentationAudioLogEn">To restart screen presentation say describe!</string>
    <string name="restartPresentationAudioLogRou">Pentru a reporni prezentarea spune descrie sau descriere!</string>
    <string name="microphoneSelectOptionAudioLogEditEn">Microphone option was selected!</string>
    <string name="microphoneSelectOptionAudioLogEditRou">Opțiunea de microfon activată!</string>
    <string name="microphoneDeselectOptionAudioLogEditEn">Microphone option was deselected!</string>
    <string name="microphoneDeselectOptionAudioLogEditRou">Opțiunea de microfon dezactivată!</string>
    <string name="speakerSelectOptionAudioLogEditEn">Speaker option was selected!</string>
    <string name="speakerSelectOptionAudioLogEditRou">Opțiunea de difuzor activată!</string>
    <string name="speakerDeselectOptionAudioLogEditEn">Speaker option was deselected!</string>
    <string name="speakerDeselectOptionAudioLogEditRou">Opțiunea de difuzor dezactivată!</string>
    <string name="englishLanguageSelectedAudioLogEditEn">English language was selected!</string>
    <string name="romanianLanguageSelectedAudioLogEditRou">Limba română a fost selectată!</string>
    <string name="englishAlsoSelectedAudioLogEditEn">English language is also selected!</string>
    <string name="romanianAlsoSelectedAudioLogEditRou">Limba română este deja selectată!</string>
    <string name="selectALanguageToastAudioLogEn">Select a language!</string>
    <string name="selectALanguageToastAudioLogRou">Alege o limbă!</string>
    <string name="mailSetAudioLogRegEn">Mail was set to</string>
    <string name="mailSetAudioLogRegRou">Mail-ul a fost setat în</string>
    <string name="passwordSetAudioLogRegEn">Password was set!</string>
    <string name="passwordSetAudioLogRegRou">Parola a fost setată!</string>
    <string name="passwordHintLogRegEditEn">password</string>
    <string name="passwordHintLogRegEditRou">parolă</string>
    <string name="logInButtonLogRegEn">Log In</string>
    <string name="logInButtonLogRegRou">Conectează-te</string>
    <string name="createButtonLogRegEn">Create account</string>
    <string name="createButtonLogRegRou">Creează cont</string>
    <string name="forgotPasswordTextViewLogEn">Forgot your password?</string>
    <string name="forgotPasswordTextViewLogRou">Ai uitat parola?</string>
    <string name="sendMailButtonLogEn">Send Email</string>
    <string name="sendMailButtonLogRou">Trimite mail</string>
    <string name="emptyMailToastAudioLogRegEn">Introduce an email!</string>
    <string name="emptyMailToastAudioLogRegRou">Introduceți un email!</string>
    <string name="emptyPasswordToastAudioLogRegEn">Introduce a password!</string>
    <string name="emptyPasswordToastAudioLogRegRou">Introduceți o parolă!</string>
    <string name="successDataToastLogEn">Connected!</string>
    <string name="successDataToastLogRou">Conectat!</string>
    <string name="wrongDataToastAudioLogEn">Email or password incorrect!</string>
    <string name="wrongDataToastAudioLogRou">Email sau parolă incorecte!</string>
    <string name="successSendMailToastAudioLogEn">A reset-password mail was send!</string>
    <string name="successSendMailToastAudioLogRou">Un mail de schimbare a parolei a fost trimis!</string>
    <string name="wrongMailToastAudioLogEn">Incorrect mail!</string>
    <string name="wrongMailToastAudioLogRou">Mail greșit!</string>
    <string name="audioGrantedToastAudioLogEn">Audio record granted!</string>
    <string name="audioGrantedToastAudioLogRou">Înregistrarea audio permisă!</string>
    <string name="audioDeniedToastAudioLogEn">Audio record denied!</string>
    <string name="audioDeniedToastAudioLogRou">Înregistrarea audio respinsă!</string>
    <string name="wrongCodeToastAudioLogEn">Wrong code!</string>
    <string name="wrongCodeToastAudioLogRou">Cod greșit!</string>
    <string name="noInternetToastAudioLogRegEn">No connection!</string>
    <string name="noInternetToastAudioLogRegRou">Nu există conexiune!</string>
    <string name="userNameHintRegEn">username</string>
    <string name="userNameHintRegRou">nume de utilizator</string>
    <string name="codeHintRegEn">code</string>
    <string name="codeHintRegRou">cod</string>
    <string name="alreadyHaveTextViewRegEn">Already have an account?</string>
    <string name="alreadyHaveTextViewRegRou">Aveți deja un cont?</string>
    <string name="emptyUserNameToastRegEn">Introduce an username!</string>
    <string name="emptyUserNameToastRegRou">Introduceți un nume de utilizator</string>
    <string name="shortPasswordToastAudioRegEditEn">Password must contain minimum 6 characters!</string>
    <string name="shortPasswordToastAudioRegEditRou">Parola trebuie să conțină minimum 6 caractere!</string>
    <string name="existUserNameToastAudioRegEditEn">User name exists!</string>
    <string name="existUserNameToastAudioRegEditRou">Numele de utilizator este indisponibil!</string>
    <string name="successCreateToastRegEn">Account created successfully!</string>
    <string name="successCreateToastRegRou">Contul a fost creat cu succes!</string>
    <string name="existEmailToastRegEn">Email exists!</string>
    <string name="existEmailToastRegRou">Email indisponibil!</string>
    <string name="describeAudioRegEn">Welcome to register screen!</string>
    <string name="describeAudioRegRou">Bun venit în ecranul de înregistrare!</string>
    <string name="describeCommandsAudioRegEn">Commands description!</string>
    <string name="describeCommandsRegRou">Descrierea comenzilor!</string>
    <string name="userNameSetAudioRegEditEn">Username was set to</string>
    <string name="userNameSetAudioRegEditRou">Numele a fost setat ca</string>
    <string name="codeSetAudioRegEn">Code was set to</string>
    <string name="codeSetAudioRegRou">Codul a fost setat ca</string>
    <string name="emptyCodeToastAudioLogEn">Introduce a login code!!</string>
    <string name="emptyCodeToastAudioLogRou">Introdu un cod de logare!</string>
    <string name="invalidCodeFormatToastAudioLogEn">Login code must contain only digits!</string>
    <string name="invalidCodeFormatToastAudioLogRou">Codul de logare trebuie să conțină doar cifre!</string>
    <string name="shortCodeToastAudioLogEn">Login code must contain minimum 6 digits!</string>
    <string name="shortCodeToastAudioLogRou">Codul de logare trebuie să conțină minim 6 cifre!</string>
    <string name="emailTextViewProfileEn">Signed as</string>
    <string name="emailTextViewProfileRou">Conectat ca</string>
    <string name="placeTextViewProfileEn">Place:</string>
    <string name="placeTextViewProfileRou">Loc:</string>
    <string name="pointsTextViewProfileEn">Points:</string>
    <string name="pointsTextViewProfileRou">Puncte:</string>
    <string name="howToPlayTextViewHelpEn">How to play?</string>
    <string name="howToScoreTextViewHelpEn">How to score?</string>
</resources>