<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_profile"
    tools:ignore="UnusedNavigation">

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.triviaapp.game.ui.profile.ProfileFragment"
        android:label="@string/title_profileEn"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_score"
        android:name="com.example.triviaapp.game.ui.rank.RankFragment"
        android:label="@string/title_scoreEn"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_game"
        android:name="com.example.triviaapp.game.ui.menu.MenuFragment"
        android:label="@string/title_gameEn"
        tools:layout="@layout/fragment_notifications" />
</navigation>