<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/howToPlayTextView"
        android:text="@string/howToPlayTextViewHelpEn"
        android:textAlignment="center"
        android:fontFamily="casual"
        android:textColor="#009EFD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/howToPlayExplicationTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/helpTextHowToPlayEn"
        android:textAlignment="center"
        android:textSize="12sp"
        android:textColor="#000000"
        />
    <TextView
        android:id="@+id/howToScoreTextView"
        android:text="@string/howToScoreTextViewHelpEn"
        android:textAlignment="center"
        android:fontFamily="casual"
        android:textColor="#009EFD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/howToScoreExplicationTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/helpTextHowToPlayEn"
        android:textAlignment="center"
        android:textSize="12sp"
        android:textColor="#000000"
        />

</LinearLayout>